[package]
name = "exdisj-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
lazy_static = { version="1.5.0" } 
serde = { version = "1.0.218", features = ["derive"], optional=true }
serde_json ={ version = "1.0.139", optional=true }
tokio = { version = "1.44.0", features = ["full"], optional = true }

[features]
async=["tokio"]
json=["serde", "serde_json"]
full=["async", "json"]