[package]
name = "exdisj"
version = "0.2.0"
edition = "2024"

[lib]
name = "exdisj"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
chrono = "0.4.40"
lazy_static = "1.5.0"

serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_json = { version = "1.0.139", optional = true }

tokio = { version = "1.44.0", features = ["full"], optional = true }
futures = { version = "0.3.31", optional = true }

aes-gcm = { version = "0.10.3", optional = true }
rsa_ext = { version = "0.1.2", optional = true }
sha2 = { version = "0.10.9", optional = true }

windows = { version = "0.61.1", features = [
        "Win32_Foundation",
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_Input_KeyboardAndMouse",
    ], optional = true }

[features]
json = ["serde", "serde_json", "rsa_ext/serde"]
auth = ["aes-gcm", "rsa_ext", "sha2"]
async = ["tokio", "futures"]
ui = ["serde", "serde_json"]
win_ui = ["windows"]
gdi_graphics = ["windows/Win32_Graphics_Gdi"]
gdi_plus_graphics = ["gdi_graphics", "windows/Win32_System_LibraryLoader", "windows/Win32_System_Services", "windows/Win32_Graphics_GdiPlus"]
direct_graphics = ["windows/Win32_Graphics_Dxgi", "windows/Win32_Graphics_Direct2D", "windows/Win32_Graphics_Direct2D_Common", "windows/Win32_Graphics_DirectWrite", "windows/Win32_Graphics_DirectComposition"]
direct3d_graphics = ["direct_graphics", "windows/Win32_Graphics_Direct3D9", "windows/Win32_Graphics_Direct3D11" ]

standard_ui = ["ui", "win_ui", "direct_graphics"]
